# timetable-api/api/swagger.json
@@ -35,90 +35,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Ajoute un événement (cours) dans la base",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "events"
-                ],
-                "summary": "Crée un événement",
-                "parameters": [
-                    {
-                        "description": "Nouvel événement à créer",
-                        "name": "event",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Event"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.Event"
-                        }
-                    },
-                    "400": {
-                        "description": "Requête invalide",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Erreur serveur",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/events/{id}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "events"
-                ],
-                "summary": "Récupère un événement par ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID de l'événement",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Event"
-                        }
-                    },
-                    "400": {
-                        "description": "ID invalide",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Événement non trouvé",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
             }
         }
     },
